[package]
name = "shell"
version = "0.1.0"
authors = ["Alexander qrer71@yandex.ru"]
edition = "2024"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"
log = "0.4.21"                             # error handling
